Bug 491531 - Plasma no longer takes user input when screen is disconnected
Summary: Plasma no longer takes user input when screen is disconnected
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: input (other bugs)
Version First Reported In: 6.1.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: wayland-only
Depends on:
Blocks:
 
Reported: 2024-08-10 13:53 UTC by Richard Tippl
Modified: 2024-08-13 18:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Tippl 2024-08-10 13:53:03 UTC
SUMMARY
When all screens are disconnected, plasma stops taking user input.

STEPS TO REPRODUCE
1. Unplug all screens (or switch screen input to another computer)
2. Try to use any input (for example media keys to pause music)

OBSERVED RESULT
Leaving music playing and switching screen input to another computer, media keys no longer take effect when pressed.

EXPECTED RESULT
Pressing pause pauses media even if the screen is disconnected.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.1.4
KDE Frameworks Version: 6.4.0
Qt Version: 6.7.2
Kernel Version: 6.10.3-arch1-2 (64-bit)
Graphics Platform: Wayland (nvidia)

ADDITIONAL INFORMATION
This used to work, as such it is a regression, however I don't know what version it stopped working.

Plugging in a dummy DP output dongle that simulates a screen, marking it as disabled and then unplugging the main screen keeps user input working.
Comment 1 Bug Janitor Service 2024-08-11 13:51:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/6224
Comment 2 Zamundaaa 2024-08-12 13:57:22 UTC
Git commit cfc0f05c942eec50d4596d5531b183356e504784 by Xaver Hugl.
Committed on 12/08/2024 at 13:44.
Pushed by zamundaaa into branch 'master'.

placeholderinputeventfilter: don't block media keys

While blindly typing with no outputs connected is unlikely to be intentional,
using the media keys likely is.

M  +2    -17   src/dpmsinputeventfilter.cpp
M  +3    -1    src/placeholderinputeventfilter.cpp
A  +38   -0    src/utils/keys.h     [License: GPL(v2.0+)]

https://invent.kde.org/plasma/kwin/-/commit/cfc0f05c942eec50d4596d5531b183356e504784
Comment 3 Zamundaaa 2024-08-12 14:20:43 UTC
Git commit 8b7e4cce2a957856ab2de8e4c08dd5cb2fc8f9b6 by Xaver Hugl.
Committed on 12/08/2024 at 14:06.
Pushed by zamundaaa into branch 'Plasma/6.1'.

placeholderinputeventfilter: don't block media keys

While blindly typing with no outputs connected is unlikely to be intentional,
using the media keys likely is.


(cherry picked from commit cfc0f05c942eec50d4596d5531b183356e504784)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>

M  +2    -17   src/dpmsinputeventfilter.cpp
M  +3    -1    src/placeholderinputeventfilter.cpp
A  +38   -0    src/utils/keys.h     [License: GPL(v2.0+)]

https://invent.kde.org/plasma/kwin/-/commit/8b7e4cce2a957856ab2de8e4c08dd5cb2fc8f9b6