placeholderinputeventfilter: don't block media keys

While blindly typing with no outputs connected is unlikely to be intentional,
using the media keys likely is.

BUG: 491531